--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model CartModel
 @{
-    ViewData["Title"] = "Aus-E-Mart Shopping Cart";
+    ViewData["Title"] = "Cool Store Shopping Cart";
 }
 <h1>@ViewData["Title"]</h1>
 
