--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Hello and welcome to the Cool Store</h1>
-    <p>You can find all your favourite Aussie products and more.</p>
+    <p>You can find all your favorite cool products and more.</p>
     <br/>
     <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/null/external-koala-animal-flaticons-lineal-color-flat-icons-2.png" width="64" alt="Koala" />
     <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/null/external-platypus-animal-flaticons-lineal-color-flat-icons-2.png" width="64" alt="Platypus" />
